# DMRG-openMP

./: CMakeLists.txt  Makefile  Matrix.cpp  Matrix.h  Matrix_Priorities.cpp  Matrix_Priorities.h  README  README.md  apply_Htarget.cpp  apply_Htarget.h  apply_Htarget_First_taskification.cpp  apply_Htarget_Overlap_iterations.h  apply_Htarget_Priorities.h  apply_Htarget_task.cpp  apply_Htarget_task_Nested_tasks.cpp  apply_Htarget_task_Overlap_iterations.cpp  apply_Htarget_task_Priorities.cpp  apply_Htarget_task_Three_tasks.cpp  apply_Htarget_task_last_version.cpp  apply_Htarget_task_v4.cpp  seq_apply_Htarget.cpp  simulate_driver.cpp  simulate_driver_cpu.cpp  simulate_driver_generate.cpp  simulate_driver_generate_Overlap_Iterations.cpp  simulate_driver_gpu.cpp  traverse.cpp
Analysis/: Abatch.m  Bbatch.m  CMakeLists.txt  analysis.h  apply_Htarget_skron.m  apply_Htarget_sparse.m  apply_Htarget_vbatch.c  apply_Htarget_vbatch.m  apply_Htarget_vbatch2.m  cal_CIJ_flops.m  cal_kron_flops.c  cal_kron_flops.m  cal_kron_sflops.m  cal_kron_space.m  dmrg_malloc.c  dmrg_vbatch.c  dmrg_vbatch.h  gen_CIJ_rand.m  gen_histogram.m  gen_patches_comb.c  gen_patches_comb.m  lib_generate.sh  run_test_vbatch_pgi.sh  setup_sparse_batch.m  setup_vbatch.c  setup_vbatch.m  sim_sweep.m  test1.m  test1_batch.m  test2.m  test2_batch.m  test_gen_CIJ_rand.m  test_gen_patches_comb.c  test_gen_patches_comb.m  test_gen_patches_comb.sh  test_target.m  test_vbatch.c  test_vbatch.h  test_vbatch.m  test_vbatch_magma.sh  (+6 more)
KokkosBuild/gcc_6.3/openMP/: Makefile
KokkosBuild/gcc_6.3/openMP/algorithms/unit_tests/: Makefile
KokkosBuild/gcc_6.3/openMP/containers/performance_tests/: Makefile
KokkosBuild/gcc_6.3/openMP/containers/unit_tests/: Makefile
KokkosBuild/gcc_6.3/openMP/core/: KokkosCore_config.h  KokkosCore_config.tmp  kokkos.cmake
KokkosBuild/gcc_6.3/openMP/core/perf_test/: Makefile
KokkosBuild/gcc_6.3/openMP/core/unit_test/: Makefile
KokkosBuild/gcc_6.3/openMP/example/feint/: Makefile
KokkosBuild/gcc_6.3/openMP/example/fenl/: Makefile
KokkosBuild/gcc_6.3/openMP/example/fixture/: Makefile
KokkosBuild/gcc_6.3/openMP/example/tutorial/: Makefile
KokkosBuild/gcc_6.3/openMP/install/: Makefile.kokkos
configure/: configure_arm_tx2
openmpPrototypeTests/: 3Level_Indi_aHT.cpp
util/: CMakeLists.txt  Makefile  Makefile.azzam  coord2csr.c  csc_kron_mult.c  csc_matmul_post.c  csc_matmul_pre.c  csr2den.c  csr_den_kron_mult.c  csr_kron_mult.c  csr_kron_submatrix.c  csr_matmul_post.c  csr_matmul_pre.c  csr_submatrix.c  den2csr.c  den_csr_kron_mult.c  den_kron_mult.c  den_kron_submatrix.c  den_submatrix.c  estimate_kron_cost.c  lib_generate.sh  make.inc.azzam  make.inc.gnu  make.inc.pgi  util.h
workingHabaneroCPP/: TicketLock.h  WorkerManager.h  accumulator.h  apply_Htarget.accum.cpp
workingKokkos/: CMakeLists.txt  README  aht_k_basicVer1.cpp  aht_k_collapsed_atomicsVer3.cpp  aht_k_teamPolicyVer2.cpp
workingOpenMP/: 2Level_Indi_aHT.cpp  collapsedSeq_applyH.cpp  task_applyHTarget.cpp
